--- a/RentC/RentC.csproj
+++ b/RentC/RentC.csproj
@@ -97,7 +97,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CarController.cs" />
+    <Compile Include="Controllers\ReservationController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="GenericValidator.cs" />
     <Compile Include="Helpers\Navigation.cs" />
@@ -115,7 +115,7 @@
     <Compile Include="Pages\Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\CarService.cs" />
+    <Compile Include="Services\ReservationServices.cs" />
     <Compile Include="Services\CustomerServices.cs" />
   </ItemGroup>
   <ItemGroup>
