--- a/RentC/packages.config
+++ b/RentC/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentValidation" version="9.2.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="2.1.0" targetFramework="net472" />
