--- a/RentC/packages.config
+++ b/RentC/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="FluentValidation" version="9.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="2.1.0" targetFramework="net472" />
@@ -10,6 +14,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="RepoDb" version="1.11.6" targetFramework="net472" />
   <package id="RepoDb.SqlServer" version="1.0.13" targetFramework="net472" />
