Adding Entity Framework to MVC

--- a/RentC_WebApplication/RentC_WebApplication.csproj
+++ b/RentC_WebApplication/RentC_WebApplication.csproj
@@ -262,6 +262,12 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RentC\RentC_ConsoleApplication.csproj">
+      <Project>{fb77ef66-fe42-45f2-bcdb-30535e6ae56f}</Project>
+      <Name>RentC_ConsoleApplication</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
