--- a/RentC/RentC_ConsoleApplication.csproj
+++ b/RentC/RentC_ConsoleApplication.csproj
@@ -137,17 +137,25 @@
   <ItemGroup>
     <Compile Include="Controllers\ReservationController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
-    <Compile Include="DbContexts\ReservationDbContext.cs" />
+    <Compile Include="DbContexts\ApplicationDbContext.cs" />
     <Compile Include="GenericValidator.cs" />
     <Compile Include="Helpers\Navigation.cs" />
     <Compile Include="Helpers\PrintColorMessage.cs" />
     <Compile Include="Helpers\WelcomeText.cs" />
-    <Compile Include="Migrations\202008301534229_Initial.cs" />
-    <Compile Include="Migrations\202008301534229_Initial.designer.cs">
-      <DependentUpon>202008301534229_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\202008301940211_Initial.cs" />
+    <Compile Include="Migrations\202008301940211_Initial.designer.cs">
+      <DependentUpon>202008301940211_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008301947446_FixFK.cs" />
+    <Compile Include="Migrations\202008301947446_FixFK.designer.cs">
+      <DependentUpon>202008301947446_FixFK.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008301956372_FixEFDbCreation.cs" />
+    <Compile Include="Migrations\202008301956372_FixEFDbCreation.designer.cs">
+      <DependentUpon>202008301956372_FixEFDbCreation.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AvaiableCarModel.cs" />
+    <Compile Include="ViewModels\AvaiableCarViewModel.cs" />
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\Coupon.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -155,7 +163,7 @@
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\ReservationStatuse.cs" />
     <Compile Include="Models\Role.cs" />
-    <Compile Include="Models\RolePermission.cs" />
+    <Compile Include="Models\RolesPermission.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Pages\Menu.cs" />
     <Compile Include="Program.cs" />
@@ -221,8 +229,14 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202008301534229_Initial.resx">
-      <DependentUpon>202008301534229_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202008301940211_Initial.resx">
+      <DependentUpon>202008301940211_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008301947446_FixFK.resx">
+      <DependentUpon>202008301947446_FixFK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008301956372_FixEFDbCreation.resx">
+      <DependentUpon>202008301956372_FixEFDbCreation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
